Fix devcontainer webstorm compat (#77)
* Fix devcontainer for WebStorm and improve performance.

- Modify Dockerfile CMD to include `npm install` for standalone `docker-compose up`.
- Update docker-compose.yml to use a named volume for node_modules, persisting them for faster startup.
- Update devcontainer.json's postStartCommand to an object, which is more robust and readable.
- The postStartCommand now explicitly runs the desktop-init.sh script, ensuring the VNC server starts in all IDEs, including WebStorm.

* Fix: Resolve devcontainer VNC and sudo errors

This commit resolves critical issues with the devcontainer setup that caused VNC startup failures and sudo permission errors.

The root causes were:
1. The `user:` directive in `docker-compose.yml` overrode the default `builduser`, which has necessary sudo privileges for the VNC startup script.
2. IDEs like WebStorm do not automatically execute the base image's ENTRYPOINT, so the VNC server was never started.

The following changes have been applied:
- `docker-compose.yml`: Removed the `user:` directive to run the container as the default `builduser`, fixing the sudo errors.
- `.devcontainer/devcontainer.json`: The `postStartCommand` now explicitly runs the `/usr/local/share/desktop-init.sh` script to ensure VNC starts reliably in all environments. It also installs dependencies and starts the dev server.
- `Dockerfile`: The `CMD` is updated to include `npm install` to ensure standalone `docker-compose up` works correctly.
- The `node_modules` directory is persisted in a named volume for improved startup performance.

* Fix: Resolve all devcontainer permission issues

This commit provides a definitive fix for the devcontainer setup, resolving a conflict between VNC/sudo requirements and Docker volume file permissions.

Problem:
- Running startup scripts (like VNC) required `sudo`, which was fixed by removing the `user:` directive in `docker-compose.yml` and running as the default `builduser`.
- However, this cau

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,9 @@
 {
   "name": "Electron Dev Container",
-  "dockerComposeFile": "../docker-compose.yml",
+  "dockerComposeFile": "docker-compose.yml",
   "service": "electron-app",
   "workspaceFolder": "/home/builduser/app",
   "remoteUser": "builduser",
-  "shutdownAction": "none",
   "customizations": {
     "vscode": {
       "extensions": [
@@ -18,5 +17,5 @@
   "features": {
     "ghcr.io/devcontainers/features/git:1": {}
   },
-  "postStartCommand": "npm install && npm run dev"
+  "postStartCommand": "/usr/local/share/desktop-init.sh && npm ci && npm run dev"
 }
