--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "typecheck": "vue-tsc --noEmit"
   },
   "author": {
     "name": "Daan Bouwman",
@@ -73,6 +74,10 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/node": "^24.10.1",
+    "@typescript-eslint/eslint-plugin": "^8.48.1",
+    "@typescript-eslint/parser": "^8.48.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/coverage-istanbul": "^4.0.6",
     "@vue/test-utils": "^2.4.6",
@@ -86,7 +91,10 @@
     "happy-dom": "^20.0.10",
     "prettier": "^3.3.3",
     "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.48.1",
     "vite": "^7.2.4",
-    "vitest": "^4.0.6"
+    "vitest": "^4.0.6",
+    "vue-tsc": "^3.1.5"
   }
 }
