--- a/package.json
+++ b/package.json
@@ -36,9 +36,13 @@
       "en-US"
     ],
     "compression": "maximum",
+    "npmRebuild": true,
+    "buildDependenciesFromSource": false,
     "files": [
       "out/**/*",
-      "!**/node_modules/*/{CHANGELOG.md,README.md,readme.md,license.txt,LICENSE.txt,test,tests,example,examples}"
+      "!**/node_modules/*/{CHANGELOG.md,README.md,readme.md,license.txt,LICENSE.txt,test,tests,example,examples}",
+      "!node_modules/@img/sharp-*",
+      "node_modules/@img/sharp-${platform}-${arch}/**/*"
     ],
     "directories": {
       "output": "release"
@@ -65,7 +69,9 @@
       ]
     },
     "asarUnpack": [
-      "node_modules/better-sqlite3/**/*"
+      "node_modules/better-sqlite3/**/*",
+      "node_modules/sharp/**/*",
+      "node_modules/@img/**/*"
     ]
   },
   "dependencies": {
