--- a/package.json
+++ b/package.json
@@ -70,21 +70,19 @@
     },
     "asarUnpack": [
       "node_modules/better-sqlite3/**/*",
-      "node_modules/sharp/**/*",
-      "node_modules/@img/**/*"
+      "node_modules/@img/**/*",
+      "node_modules/ffmpeg-static/**/*"
     ]
   },
   "dependencies": {
     "better-sqlite3": "^12.5.0",
-    "sharp": "^0.34.5",
-    "tinycolor2": "^1.6.0",
+    "ffmpeg-static": "^5.3.0",
     "vue": "^3.5.12"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.10.1",
-    "@types/tinycolor2": "^1.4.6",
     "@typescript-eslint/eslint-plugin": "^8.48.1",
     "@typescript-eslint/parser": "^8.48.1",
     "@vitejs/plugin-vue": "^6.0.1",
