--- a/package.json
+++ b/package.json
@@ -36,9 +36,13 @@
       "en-US"
     ],
     "compression": "maximum",
+    "npmRebuild": true,
+    "buildDependenciesFromSource": false,
     "files": [
       "out/**/*",
-      "!**/node_modules/*/{CHANGELOG.md,README.md,readme.md,license.txt,LICENSE.txt,test,tests,example,examples}"
+      "!**/node_modules/*/{CHANGELOG.md,README.md,readme.md,license.txt,LICENSE.txt,test,tests,example,examples}",
+      "!node_modules/@img/sharp-*",
+      "node_modules/@img/sharp-${platform}-${arch}/**/*"
     ],
     "directories": {
       "output": "release"
@@ -65,11 +69,14 @@
       ]
     },
     "asarUnpack": [
-      "node_modules/better-sqlite3/**/*"
+      "node_modules/better-sqlite3/**/*",
+      "node_modules/@img/**/*",
+      "node_modules/ffmpeg-static/**/*"
     ]
   },
   "dependencies": {
     "better-sqlite3": "^12.5.0",
+    "ffmpeg-static": "^5.3.0",
     "vue": "^3.5.12"
   },
   "devDependencies": {
