introduced web version

--- a/package.json
+++ b/package.json
@@ -22,7 +22,14 @@
     "format:check": "prettier --check .",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "typecheck": "vue-tsc -b --noEmit"
+    "typecheck": "vue-tsc -b --noEmit",
+    "dev:server": "tsx watch src/server/server.ts",
+    "dev:web": "vite",
+    "predev:all": "npm rebuild better-sqlite3",
+    "dev:all": "concurrently \"npm run dev:server\" \"npm run dev:web\"",
+    "build:web": "vue-tsc -b --noEmit && vite build",
+    "build:server": "esbuild src/server/server.ts --bundle --platform=node --format=esm --outfile=dist-server/index.js --packages=external && esbuild src/core/database-worker.ts --bundle --platform=node --format=esm --outfile=dist-server/worker.js --packages=external",
+    "start:server": "tsx src/server/server.ts"
   },
   "author": {
     "name": "Daan Bouwman",
@@ -73,18 +80,25 @@
   },
   "dependencies": {
     "better-sqlite3": "^12.5.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "ffmpeg-static": "^5.3.0",
     "vue": "^3.5.12"
   },
   "devDependencies": {
+    "@swc/core": "^1.15.3",
     "@tailwindcss/vite": "^4.1.17",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.48.1",
     "@typescript-eslint/parser": "^8.48.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/coverage-istanbul": "^4.0.6",
     "@vue/test-utils": "^2.4.6",
+    "concurrently": "^9.2.1",
     "electron": "^39.2.6",
     "electron-builder": "^26.3.5",
     "electron-vite": "^5.0.0",
@@ -95,6 +109,7 @@
     "happy-dom": "^20.0.10",
     "prettier": "^3.3.3",
     "tailwindcss": "^4.1.17",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.1",
     "vite": "^7.2.7",
