--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "predev:all": "npm rebuild better-sqlite3",
     "dev:all": "concurrently \"npm run dev:server\" \"npm run dev:web\"",
     "build:web": "vue-tsc -b --noEmit && vite build",
-    "build:server": "esbuild src/server/server.ts --bundle --platform=node --format=esm --outfile=dist-server/index.js --packages=external && esbuild src/core/database-worker.ts --bundle --platform=node --format=esm --outfile=dist-server/worker.js --packages=external",
+    "build:web:fast": "vite build",
+    "build:server": "concurrently \"esbuild src/server/server.ts --bundle --platform=node --format=esm --outfile=dist-server/index.js --packages=external\" \"esbuild src/core/database-worker.ts --bundle --platform=node --format=esm --outfile=dist-server/worker.js --packages=external\"",
     "start:server": "tsx src/server/server.ts"
   },
   "author": {
