--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^24.10.1",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.48.1",
     "@typescript-eslint/parser": "^8.48.1",
     "@vitejs/plugin-vue": "^6.0.1",
@@ -111,6 +112,7 @@
     "happy-dom": "^20.0.10",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
+    "supertest": "^7.1.4",
     "tailwindcss": "^4.1.17",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
