chore: add baseUrl to tsconfig.web.json.

--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -11,6 +11,7 @@
     "noUnusedParameters": true,
     "outDir": "out",
     "types": ["vite/client", "node"],
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/renderer/*"]
     }
