fix: Correct Dockerfile server command path and add .env file loading to docker-compose.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,6 @@ services:
       - ./media:/media
     environment:
       - NODE_ENV=production
+    env_file:
+      - .env
     restart: unless-stopped
