chore: add cache, coverage, release, playwright-report, and test-results to .dockerignore.

--- a/.dockerignore
+++ b/.dockerignore
@@ -11,3 +11,8 @@ media-library.db
 media-library.db-shm
 media-library.db-wal
 tests/temp/
+cache
+coverage
+release
+playwright-report
+test-results
