--- a/.dockerignore
+++ b/.dockerignore
@@ -11,3 +11,9 @@ media-library.db
 media-library.db-shm
 media-library.db-wal
 tests/temp/
+cache
+coverage
+playwright-report
+test-results
+.env
+media
