feat: Update Dockerfile for faster web build and Node 22, and add config persistence and HOME environment variable to docker-compose.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,12 @@ services:
       # You can add more mappings as needed.
       # Host path : Container path
       - ./media:/media
+      # Add this line to persist your google-token.json
+      - ./config:/app/.config/mediaplayer-app
     environment:
       - NODE_ENV=production
+      # Add this line so the app knows where "Home" is
+      - HOME=/app
     env_file:
       - .env
     restart: unless-stopped
