--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@
 GOOGLE_CLIENT_ID=your_client_id_here
 GOOGLE_CLIENT_SECRET=your_client_secret_here
 GOOGLE_REDIRECT_URI=your_redirect_uri_here
+# Host for the development server. Defaults to 127.0.0.1.
+# Use 0.0.0.0 to expose the server to the local network.
+HOST=127.0.0.1
