--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "rimraf": "^6.0.1",
     "supertest": "^7.1.4",
     "tailwindcss": "^4.1.17",
+    "terser": "^5.44.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.0",
